# ros

./: CMakeLists.txt  Readme.md  Readme_EN.md  batch_label.py  batch_label1.py  demo.py  eval.py  log_seg.txt  package.xml  readme.txt  train.py  读我嘻嘻嘻.txt
MyModel/: aipp_yolov3.cfg  shape_yolov3  模型文件太大了自己重新转换吧-缺yolov3.caffemodel.txt
building_retrieve/: CMakeLists.txt  README.txt
building_retrieve/database/: mould_names.txt
building_retrieve/dbow_src/: Database.cpp  my_function.cpp  my_function.h
building_retrieve/src/: img_retrieve.cpp  save_database.cpp
config/: global_config.py
data/: __init__.py  cityscapes.py  cityscapes_my.py  val.txt
data_provider/: lanenet_data_processor.py
output_data/: 2019_12_13_10_14_56_CAN_info.txt  2019_12_13_10_14_56_CTRL_info.txt  2019_12_4_17_51_7_CAN_info.txt  2019_12_4_17_51_7_CTRL_info.txt  2019_12_4_17_55_43_CAN_info.txt  2019_12_4_17_55_43_CTRL_info.txt  2019_12_4_17_57_17_CAN_info.txt  2019_12_4_17_57_17_CTRL_info.txt  2019_12_4_18_1_21_CAN_info.txt  2019_12_4_18_1_21_CTRL_info.txt  2019_12_4_18_3_40_CAN_info.txt  2019_12_4_18_3_40_CTRL_info.txt  车辆信息读回格式说明.txt
position/: CMakeLists.txt  README.txt  package.xml
position/database/: mould_names.txt
position/dbow_src/: BowVector.h  Database.cpp  FeatureVector.h  Vocabulary.cpp  (+2 more)
rename_imgs/: README.txt  images_rename.py
script/: deploy.sh  func_util.sh  模型转换完后生成yolov3.om文件太大了删除了.txt
src/: CMakeLists.txt  Main.cpp  graph.config  param_configure.conf  read_steering.cpp  run_object_detection_yolov3.py
tools/: test_lanenet.py  train_lanenet.py  train_lanenet1.py
(+9 files in other folders)
